# commit-matcher

./: .gitignore  CMakeLists.txt  Makefile  README
src/: CMakeLists.txt  adv.c  c-matcher.c  impl.c  json-matcher.c  main.c  matcher.h
src/lib/: matcher.h
src/matcher/: CMakeLists.txt  impl.c
